--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 
 [[constraint]]
-  name = "github.com/Sirupsen/logrus"
+  name = "github.com/sirupsen/logrus"
   version = "1.0.5"
 
 [[constraint]]
@@ -115,7 +115,7 @@
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "7.0.0"
+  version = "1.20.0"
 
 [[constraint]]
   branch = "master"
